# aria

./: .gitignore
.zed/: settings.json
backend/: pyproject.toml  server.py
backend/tests/: test_ws.py
backend/utils/: logger.py
firmware/: .clangd  README.md  platformio.ini
firmware/src/: config.cpp  config.h  main.cpp
firmware/src/display/: display_utils.cpp  display_utils.h
firmware/src/websocket/: websocket_client.cpp  websocket_client.h
